# egui-img-gallery

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  README.md  ROADMAP.md  flake.nix  setup.sh
.cargo/: config.toml
src/: animation.rs  events.rs  folder_monitor.rs  image_handling.rs  main.rs  model.rs  view.rs
tests/: model.rs
