[package]
name = "egui-img-gallery"
version = "0.1.0"
edition = "2024"

[dependencies]
glium = "0.36.0"
iced = { version = "0.13.1", features = ["tokio", "wgpu", "image"] }
image = { version = "0.25.6", features = ["serde"] }
notify = { version = "8.1.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tokio = { version = "1.46.1", features = ["full"] }
wgpu = "26.0.1"
